--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -1,33 +1,25 @@
 <div class="contact-container">
-    <section>
-        <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo">
-        <!-- <h2>Bartosz Prochowski</h2> -->
-    </section>
+  <section>
+    <img class="img-logo" src="assets/svg/newId_logo.svg" alt="newId logo" />
+  </section>
 
+  <section>
+    <p>Poznań</p>
+    <p>
+      <a routerLink="tel:+48xxxxxxxxx">
+        <span style="font-size: smaller">+48</span>&nbsp;<span
+          style="font-size: x-large"
+          >xxx xxx xxx</span
+        >
+      </a>
+    </p>
+    <p>
+      <a routerLink="mailto:info@newId.pl"> info@newId.pl </a>
+    </p>
+  </section>
 
-    <section>
-        <p>Poznań, Bolka 2/81</p>
-        <p>
-            <a routerLink="tel:+48509229735">
-                <span style="font-size: smaller;">+48</span>&nbsp;<span style="font-size: x-large;">509 229 735</span>
-            </a>
-        </p>
-        <p>
-            <a routerLink="mailto:info@newId.pl">
-                info@newId.pl
-            </a>
-        </p>
-    </section>
-
-    <br />
-    <section>
-        <div class="contact-footer">
-            <h6>
-                Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a routerLink="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a routerLink="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
-            </h6>
-        </div>
-    </section>
-
-
-
+  <br />
+  <section>
+    <div class="contact-footer"></div>
+  </section>
 </div>
