--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -1,42 +1,30 @@
-<!-- <div appViewportFixer class="home-container">
-
-        <div class="logo">
-            <img class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
-        </div>
-        
-
-        <div class="socials">
-            <app-social-links></app-social-links>
-        </div>
-</div> -->
-
-
-
-
 <div fxLayout="column">
-    <div fxLayout="column" fxLayoutAlign="center center">
-        <section>
-            <div class="logo-container">
-                <img fxFlex.gt-sm="100" class="logo-image" src="/assets/svg/newId_logo.svg" alt="newID logo">
-            </div>
-        </section>
-        <section>
-            <div class="title-container" fxLayout="column" fxLayoutAlign="center stretch">
-                <div class="subtitle">
-                    Nowa tożsamość Twojej firmy
-                </div>
-                <div class="title">
-                    Agencja marketingowa
-                </div>
-            </div>
-
-        </section>
-    </div>
-
+  <div fxLayout="column" fxLayoutAlign="center center">
     <section>
-        <div class="socials">
-            <app-social-links></app-social-links>
-        </div>
+      <div class="logo-container">
+        <img
+          fxFlex.gt-sm="100"
+          class="logo-image"
+          src="/assets/svg/newId_logo.svg"
+          alt="newID logo"
+        />
+      </div>
     </section>
+    <section>
+      <div
+        class="title-container"
+        fxLayout="column"
+        fxLayoutAlign="center stretch"
+      >
+        <div class="subtitle">What the f?</div>
+        <div class="title">--- Nowa tożsamość ---</div>
+      </div>
+    </section>
+  </div>
 
+  <section>
+    <div class="socials">
+      <app-social-links></app-social-links>
+    </div>
+  </section>
 </div>
