--- a/src/app/sites/social-links/social-links.component.html
+++ b/src/app/sites/social-links/social-links.component.html
@@ -1,76 +1,156 @@
-<svg #parent *ngIf="isShown" @brickList x="0" y="0" height="100%" xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" viewBox="0 0 1100 250" preserveAspectRatio="xMidYMid meet">
-    <g class="social-icon" transform-origin="center">
-        <a xlink:href="https://www.facebook.com/newIdPL">
-            <svg appPathLengthInfo [strokeBigPx]="8"  [animDelay]="delayArr[0]" x="7%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
-                <path d="M264.11,466.75H54.2c0,0-8.38-0.88-14.99-7.5c-3.99-3.99-6.17-7.87-6.17-16.32c0-21.61,0-388.07,0-388.07
+<svg
+  #parent
+  *ngIf="isShown"
+  @brickList
+  x="0"
+  y="0"
+  height="100%"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+  width="100%"
+  viewBox="0 0 1100 250"
+  preserveAspectRatio="xMidYMid meet"
+>
+  <g class="social-icon" transform-origin="center">
+    <a xlink:href="https://www.facebook.com/">
+      <svg
+        appPathLengthInfo
+        [strokeBigPx]="8"
+        [animDelay]="delayArr[0]"
+        x="7%"
+        y="60"
+        width="130"
+        height="130"
+        viewBox="0 0 500 500"
+        preserveAspectRatio="xMidYMid meet"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+        <path
+          d="M264.11,466.75H54.2c0,0-8.38-0.88-14.99-7.5c-3.99-3.99-6.17-7.87-6.17-16.32c0-21.61,0-388.07,0-388.07
                 s1.32-9.7,7.06-14.99c6.43-5.94,12.79-6.61,12.79-6.61h393.36c0,0,9.44,1.99,14.11,7.06c5.29,5.73,6.61,14.11,6.61,14.11v390.72
                 c0,0,0.44,7.06-6.61,14.55c-7.06,7.5-16.32,7.06-16.32,7.06H333.34l-0.88-167.58h56.89l8.82-65.71H332.9l0.44-52.48
                 c0,0,0.88-7.06,5.73-12.79c6.06-7.16,18.08-7.94,18.08-7.94l42.78-0.88v-58.21c0,0-22.8-2.43-30.43-2.65c-7.5-0.21-31.75,0-31.75,0
-                s-33.19,5.03-48.07,20.73c-24.25,25.58-25.58,56.01-25.58,56.01l1.32,58.21l-56.89-0.44l-0.44,65.71l56.89,0.44L264.11,466.75z"/>
-            </svg>
-        </a>
-    </g>
+                s-33.19,5.03-48.07,20.73c-24.25,25.58-25.58,56.01-25.58,56.01l1.32,58.21l-56.89-0.44l-0.44,65.71l56.89,0.44L264.11,466.75z"
+        />
+      </svg>
+    </a>
+  </g>
 
-    <g class="social-icon" transform-origin="center">
-        <a xlink:href="https://www.instagram.com/newId.PL/">
-            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[1]" x="25%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
-                <path d="M363.78,21H148.22C78.07,21,21,78.07,21,148.22v215.55C21,433.93,78.07,491,148.22,491h215.55
-                C433.93,491,491,433.93,491,363.78V148.22C491,78.07,433.93,21,363.78,21z"/>
-            <path d="M256,127.49c-168.89,3.03-168.87,254.02,0.01,257.02C424.89,381.48,424.87,130.49,256,127.49z"/>
-            <path d="M387.59,81.85c-49.91,0.89-49.9,75.06,0,75.95C437.49,156.9,437.49,82.73,387.59,81.85z"/>    
-            </svg>
-        </a>
-    </g>
+  <g class="social-icon" transform-origin="center">
+    <a xlink:href="https://www.instagram.com/">
+      <svg
+        appPathLengthInfo
+        [strokeBigPx]="8"
+        [animDelay]="delayArr[1]"
+        x="25%"
+        y="60"
+        width="130"
+        height="130"
+        viewBox="0 0 500 500"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+        <path
+          d="M363.78,21H148.22C78.07,21,21,78.07,21,148.22v215.55C21,433.93,78.07,491,148.22,491h215.55
+                C433.93,491,491,433.93,491,363.78V148.22C491,78.07,433.93,21,363.78,21z"
+        />
+        <path
+          d="M256,127.49c-168.89,3.03-168.87,254.02,0.01,257.02C424.89,381.48,424.87,130.49,256,127.49z"
+        />
+        <path
+          d="M387.59,81.85c-49.91,0.89-49.9,75.06,0,75.95C437.49,156.9,437.49,82.73,387.59,81.85z"
+        />
+      </svg>
+    </a>
+  </g>
 
-    <g class="social-icon" transform-origin="center">
-        <a xlink:href="https://g.page/newIdpl">
-            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[2]" x="44%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
-                <g>
-                    <path d="M250,246.71c-17.21,0-34.43-6.55-47.53-19.66c-26.21-26.21-26.21-68.85,0-95.06
+  <g class="social-icon" transform-origin="center">
+    <a xlink:href="https://g.page/">
+      <svg
+        appPathLengthInfo
+        [strokeBigPx]="8"
+        [animDelay]="delayArr[2]"
+        x="44%"
+        y="60"
+        width="130"
+        height="130"
+        viewBox="0 0 500 500"
+        preserveAspectRatio="xMidYMid meet"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+        <g>
+          <path
+            d="M250,246.71c-17.21,0-34.43-6.55-47.53-19.66c-26.21-26.21-26.21-68.85,0-95.06
                         c12.69-12.7,29.57-19.69,47.53-19.69s34.83,6.99,47.53,19.69c26.21,26.21,26.21,68.85,0,95.06
-                        C284.42,240.16,267.21,246.71,250,246.71z"/>
-                    <path d="M250.16,476.6l-10.28-12.07c-6.02-7.07-147.41-174.42-147.41-283.6C92.47,94.07,163.14,23.4,250,23.4
-                        s157.53,70.67,157.53,157.53c0,103.81-141.27,276.16-147.28,283.44L250.16,476.6z"/>
-                </g>    
-            
-            </svg>
-        </a>
-    </g>
+                        C284.42,240.16,267.21,246.71,250,246.71z"
+          />
+          <path
+            d="M250.16,476.6l-10.28-12.07c-6.02-7.07-147.41-174.42-147.41-283.6C92.47,94.07,163.14,23.4,250,23.4
+                        s157.53,70.67,157.53,157.53c0,103.81-141.27,276.16-147.28,283.44L250.16,476.6z"
+          />
+        </g>
+      </svg>
+    </a>
+  </g>
 
-    <g class="social-icon" transform-origin="center">
-        <a xlink:href="mailto:info@newId.pl">
-            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[3]" x="63%" y="60" width="130" height="130" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
-                <path d="M315.33,174.42c-38.42-10.51-81.89,6.82-111.83,33.08c-18.22,15.98-31.55,41.56-37.44,65.07
+  <g class="social-icon" transform-origin="center">
+    <a xlink:href="mailto:info@newId.pl">
+      <svg
+        appPathLengthInfo
+        [strokeBigPx]="8"
+        [animDelay]="delayArr[3]"
+        x="63%"
+        y="60"
+        width="130"
+        height="130"
+        viewBox="0 0 500 500"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+        <path
+          d="M315.33,174.42c-38.42-10.51-81.89,6.82-111.83,33.08c-18.22,15.98-31.55,41.56-37.44,65.07
                 s5.32,52.84,28.84,58.69c13.26,3.3,27.18-1.29,39.58-7.04c36.07-16.72,67.19-43.96,88.53-77.5c9.27-14.58,15.45-36.63,1.54-46.87
                 c-9.4-6.92-23.44-3.43-31.87,4.64c-8.43,8.07-12.58,19.51-16.43,30.52c-8.14,23.3-15.64,50.8-1.73,71.18
                 c11.26,16.5,34.01,22.28,53.5,17.9c19.49-4.38,36.07-17.16,49.99-31.47c34.6-35.57,56.77-83.32,60.23-132.83
                 c1.69-24.14-1.25-49.39-13.71-70.13c-15.26-25.41-43.58-41.25-72.85-45.95c-29.27-4.7-59.39,0.73-87.39,10.47
                 c-60.71,21.12-113.59,62.56-151.55,114.43c-30.33,41.44-51.77,91.08-51.43,142.43c0.34,51.35,25.23,104,69.78,129.54
-                c51.8,29.69,118.41,18,171.39-9.54c46.77-24.31,87.47-60.18,117.46-103.52"/>
-            </svg>
-        </a>
-    </g>
+                c51.8,29.69,118.41,18,171.39-9.54c46.77-24.31,87.47-60.18,117.46-103.52"
+        />
+      </svg>
+    </a>
+  </g>
 
-    <g class="social-icon" transform-origin="center">
-        <a xlink:href="tel:+48509229735">
-            <svg appPathLengthInfo [strokeBigPx]="8" [animDelay]="delayArr[4]" x="81%" y="60" width="130" height="130" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
-                <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
-                <g>
-                    <path d="M281.71,373.26c78.29,18.64,105.84-48.33,92.04-73.32c-5.53-9.97-55.21-29.13-57.63-30.06
+  <g class="social-icon" transform-origin="center">
+    <a xlink:href="tel:+48xxxxxxxxx">
+      <svg
+        appPathLengthInfo
+        [strokeBigPx]="8"
+        [animDelay]="delayArr[4]"
+        x="81%"
+        y="60"
+        width="130"
+        height="130"
+        viewBox="0 0 500 500"
+        preserveAspectRatio="xMidYMid meet"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <rect x="0" y="0" width="100%" height="100%" fill-opacity="0"></rect>
+        <g>
+          <path
+            d="M281.71,373.26c78.29,18.64,105.84-48.33,92.04-73.32c-5.53-9.97-55.21-29.13-57.63-30.06
                         c-21.34-7.77-29.23,6.73-44.02,25.81c-28.4-14.21-47.44-25.4-67-57.22c1.1-1.37,2.57-3,3.67-4.23
                         c6.84-7.66,19.66-21.92,10.92-39.38c-7.35-14.63-11-24.84-13.69-32.32c-7.79-21.67-13.73-27.55-40.56-27.55
-                        c-27.93,0-49.6,36.71-49.6,68.32C115.85,272.3,208.6,355.81,281.71,373.26z"/>
-                    <path d="M25.62,468.23c-2.53,9.16,4.33,18.35,13.98,18.35c3.48,0-2.2,0.89,113.05-29
+                        c-27.93,0-49.6,36.71-49.6,68.32C115.85,272.3,208.6,355.81,281.71,373.26z"
+          />
+          <path
+            d="M25.62,468.23c-2.53,9.16,4.33,18.35,13.98,18.35c3.48,0-2.2,0.89,113.05-29
                         c46.92,23.89,82.58,23.14,105.36,25.29c204.04,0,303.98-248.85,163.56-393.64C229.09-96.83-70.68,134.38,54.76,362.31L25.62,468.23
-                        z"/>
-                </g>
-            </svg>
-        </a>
-    </g>
-
+                        z"
+          />
+        </g>
+      </svg>
+    </a>
+  </g>
 </svg>
