fix socials alignment

--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -6,7 +6,7 @@
   <section>
     <p>Poznań</p>
     <p>
-      <a routerLink="tel:+48xxxxxxxxx">
+      <a href="tel:+48xxxxxxxxx">
         <span style="font-size: smaller">+48</span>&nbsp;<span
           style="font-size: x-large"
           >xxx xxx xxx</span
@@ -14,12 +14,7 @@
       </a>
     </p>
     <p>
-      <a routerLink="mailto:info@newId.pl"> info@newId.pl </a>
+      <a href="mailto:info@newId.pl"> info@newId.pl </a>
     </p>
-  </section>
-
-  <br />
-  <section>
-    <div class="contact-footer"></div>
   </section>
 </div>
