--- a/src/app/sites/menu/menu.component.html
+++ b/src/app/sites/menu/menu.component.html
@@ -1,5 +1,5 @@
-<nav>
-  <div fxFlex="35">
+<nav fxLayout fxLayoutAlign="space-between center">
+  <div>
     <a routerLink="/home" routerLinkActive="active-menu-item">
       <svg
         class="menu-item"
@@ -42,7 +42,7 @@
     </a>
   </div>
 
-  <div fxFlex="35">
+  <div>
     <a routerLink="/kontakt" routerLinkActive="active-menu-item">
       <svg
         class="menu-item"
